# ai-code-repair

./: .gitignore  ENGINEERING_LOG.md  PROJECT_SPEC.md  README.md  RESEARCH_IDEAS.md  pyproject.toml
datasets/mini_bugs/case_001/: buggy.py  test_buggy.py
datasets/mini_bugs/case_002/: lset.py  meta.json  test_lset.py
datasets/mini_bugs/case_003/: meta.json
datasets/mini_bugs/case_005/: buggy.py  meta.json  test_buggy.py
datasets/mini_bugs/case_006/: buggy.py  meta.json  test_buggy.py
datasets/mini_bugs/case_007/: buggy.py  meta.json  test_buggy.py
experiments/case_001/20260303T093541Z/: junit.xml
experiments/case_001/20260303T095027Z/: junit.xml
experiments/case_001/20260303T095638Z/: junit.xml
experiments/case_001/20260303T095650Z/: junit.xml  result.json
experiments/case_001/20260303T095710Z/: junit.xml
experiments/case_001/20260303T164355Z/: junit.xml
experiments/case_001/20260303T164714Z/: junit.xml  result.json
experiments/case_001/20260303T165633Z/: junit.xml  result.json
experiments/case_001/20260303T172235Z/: junit.xml  result.json
experiments/case_001/20260304T094742Z/: junit.xml  result.json
experiments/case_001/20260304T094932Z/: junit.xml  result.json
experiments/case_005/: NOTES.md
experiments/runner_smoke_case/: fix.diff  report.json  test_buggy.py
experiments/tmp/: junit.xml
scripts/: repair.py
src/ai_code_repair/repair/: llm.py  (+6 more)
src/runner/: report.py  runner.py
tests/: test_extract_code.py  test_gemini_client_model.py  test_imports.py  test_junit_parsing.py  test_junit_stem.py  test_patch_recovery.py  test_prompt_stderr.py  test_runner_executable.py  test_summary_accounting.py
(+29 files in other folders)
